--- a/css/styles.css
+++ b/css/styles.css
@@ -26,13 +26,18 @@ p {
 
 img {
 	display: block;
+	max-width: 100%;
+	height: auto;
+}
+
+address {
+	font-style: normal;
 }
 
 .container {
 	width: 1158px;
 	margin: 0 auto;
 	padding: 0 15px;
-	box-sizing: border-box;
 }
 
 .section {
@@ -98,11 +103,28 @@ img {
 	letter-spacing: 0.02em;
 	padding: 24px 0;
 	display: block;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
 .nav-link:focus {
 	color: #404bbf;
+}
+
+.header-current {
+	position: relative;
+	color: #404bbf;
+}
+
+.header-current::after {
+	content: "";
+	border-radius: 2px;
+	width: 100%;
+	height: 4px;
+	background: #404bbf;
+	position: absolute;
+	left: 0;
+	bottom: -1px;
 }
 
 .address {
@@ -133,6 +155,12 @@ img {
 	background: #2e2f42;
 	padding-top: 188px;
 	padding-bottom: 188px;
+	background-image: linear-gradient(
+		rgba(46, 47, 66, 0.7),
+		rgba(46, 47, 66, 0.7)),
+		url(../images/order-service-bg.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .order-service-title {
@@ -178,6 +206,16 @@ img {
 .about-item {
 	flex-basis: calc((100% - 3 * 24px) / 4)
 }
+
+.about-item-svg-wrap {
+	border: 1px solid #8e8f99;
+	border-radius: 4px;
+	padding: 24px 100px;
+	background: #f4f4fd;
+	margin-bottom: 8px;
+}
+
+.about-item-svg {}
 
 .about-item-title {
 	font-weight: 500;
@@ -246,6 +284,28 @@ img {
 	text-align: center;
 }
 
+.team-item-svg-list {
+	display: flex;
+	justify-content: space-between;
+	padding-left: 16px;
+	padding-right: 16px;
+	margin-top: 8px;
+}
+
+.team-item-svg-wrap {
+	width: 40px;
+	height: 40px;
+	background-color: #4d5ae5;
+	border-radius: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.team-item-svg {
+	fill: #f4f4fd;
+}
+
 /* ===Portfolio=== */
 
 .portfolio {}
@@ -276,6 +336,31 @@ img {
 
 .portfolio-item {
 	width: calc((100% - 48px) / 3);
+	box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-item:hover .portfolio-img-text{
+	transform: translateY(0);
+}
+
+.portfolio-img-wrap {
+	position: relative;
+	overflow: hidden;
+}
+
+.portfolio-img-text {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: #f4f4fd;
+	position: absolute;
+	top: 0;
+	background: #4d5ae5;
+	height: 100%;
+	padding: 40px 32px 164px 32px;
+	transform: translateY(100%);
+	transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item-title {
@@ -301,6 +386,14 @@ img {
 	padding-bottom: 100px;
 }
 
+.footer-container {
+	display: flex;
+}
+
+.footer-prime-wrap {
+	margin-right: 120px;
+}
+
 .footer-logo {
 	color: #4d5ae5;
 	font-family: "Raleway", sans-serif;
@@ -324,4 +417,32 @@ img {
 	letter-spacing: 0.02em;
 	color: #f4f4fd;
 	width: 264px;
+}
+
+.footer-media-subtitle {
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: #fff;
+	margin-bottom: 16px;
+}
+
+.footer-media-list {
+	display: flex;
+	gap: 16px;
+}
+
+.footer-item-svg-wrap {
+	width: 40px;
+	height: 40px;
+	background-color: #4d5ae5;
+	border-radius: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.footer-item-svg {
+	fill: #f4f4fd;
 }
