--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,12 @@ address {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	max-width: 1440p
+	max-width: 1440px;
+	margin: 0 auto;
+}
+
+.order-service-container {
+	max-width: 1440px;
 }
 
 .order-service-title {
@@ -194,7 +199,7 @@ address {
 	padding: 16px 32px;
 	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 	margin: 0 auto;
-	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-service-btn:hover,
@@ -316,9 +321,9 @@ address {
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-item-svg-link:hover,
+.team-item-svg-link:hover, 
 .team-item-svg-link:focus {
-	background-color: #404bbf
+	background-color: #404bbf;
 }
 
 .team-item-svg {
